# strauss

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  AudioCaption.ipynb  FilterSweepDemo.ipynb  MANIFEST.in  README.md  StarsAppearing.ipynb  channels.py  data_schruba2011.txt  environment.yml  filter_sweep.py  generator.py  notes.py  paper.md  pyproject.toml  setup.cfg  sonification.py  sources.py  stream.py  test.py  yamls_to_tables.py
.github/workflows/: premerge-checks.yml
data/datasets/: M_spectrum.txt  NGC1535.csv  NGC6302.csv  O_spectrum.txt  landfrac.txt  stars_paranal.txt
docs/: conf.py  detailed.rst  elements.rst  examples.rst  index.rst  install.rst  motivation.rst  params.rst  requirements.txt  start.rst  todo.rst  yamls_to_tables.py
docs/_static/: custom.css
examples/: AudioCaption.ipynb  AudioCaption.py  DaySequence.ipynb  DaySequence.py  EarthSystem.ipynb  EarthSystem.py  FilterSweepDemo.ipynb  LightCurveSoundfonts.ipynb  LightCurveSoundfonts.py  PlanetaryOrbits.ipynb  PlanetaryOrbits.py  Polyrhythm.ipynb  SonifyingData1D.ipynb  SonifyingData1D.py  SonifyingDataTESS.ipynb  SpectralData.ipynb  SpectralData.py  Spectralise.ipynb  SpectraliseGalaxies.ipynb  StarsAppearing.ipynb  StarsAppearing.py  TESSLightCurves.ipynb  Untitled.ipynb
examples/.ipynb_checkpoints/: AudioCaptionTutorial-checkpoint.ipynb  DaySequence-checkpoint.ipynb  SonifyingData1D-checkpoint.ipynb  StarsAppearing-checkpoint.ipynb
examples/colab/: AudioCaption.ipynb  DaySequence.ipynb  EarthSystem.ipynb  LightCurveSoundfonts.ipynb  PlanetaryOrbits.ipynb  SonifyingData1D.ipynb  SpectralData.ipynb  StarsAppearing.ipynb
joss/: paper.bib  paper.md
src/strauss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tutorials/: AudioCaptionTutorial.ipynb  input_text.txt
(+52 files in other folders)
