[build-system]
requires = [
    "ffmpeg-python",
    "matplotlib",
    "numpy",
    "pandas",
    "pychord",	
    "pyyaml",
    "scipy",
    "setuptools>=42",
    "sf2utils",
    "tqdm",
    "wavio",
    "wheel",
    "pyttsx3 @ git+https://github.com/nateshmbhat/pyttsx3.git"
]
build-backend = "setuptools.build_meta"
