[metadata]
name = strauss
version = 0.0.1
author = James Trayford
author_email = james.trayford@port.ac.uk
description = Sonification Tools and Resources for Astronomers Using Sound Synthesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/james-trayford/strauss
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src